# nightShiftBackend

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/agents/: base.py
app/api/: account.py  agents.py  analytics.py  auth.py  candles.py  charges.py  indicators.py  instruments.py  market.py  orders.py  portfolio.py  reports.py  skills_api.py  store.py  strategies.py  trades.py  ws.py
app/core/: config.py  database.py  ws_manager.py
app/models/: __init__.py  account.py  agent_insight.py  candle.py  daily_report.py  indicator.py  instrument.py  skill_version.py  store_snapshot.py  strategy.py  trade.py  user_trading_config.py
app/services/: agent_runner.py  candle_ingestor.py  charge_calculator.py  instrument_service.py  oanda.py  paper_engine.py  portfolio_service.py  rate_limiter.py  (+11 more)
migrations/: env.py
tests/: conftest.py  test_agent_runner.py  test_agent_tools.py  test_analytics_enhanced.py  test_api_agents.py  test_api_analytics.py  test_api_auth.py  test_api_candles.py  test_api_indicators.py  test_api_instruments.py  test_api_market.py  test_api_orders.py  test_api_portfolio.py  test_api_reports.py  test_api_store.py  test_api_strategies.py  test_api_trades.py  test_candle_ingestor.py  test_charge_calculator.py  test_encryption.py  test_instrument_service.py  test_oanda.py  test_paper_engine.py  test_rate_limiter.py  test_scheduler.py  test_store_calculator.py  test_store_calculator_full.py  test_store_updater.py  test_token_manager.py  test_trade_executor.py  test_trading_context.py  test_upstox_ingestor.py  test_upstox_service.py  test_ws.py
(+38 files in other folders)
